--- a/custom_components/linkplay/services.yaml
+++ b/custom_components/linkplay/services.yaml
@@ -66,7 +66,7 @@ restore:
         entity:
           integration: linkplay
 
-preset:
+play_preset:
   name: Preset
   description: Recall content preset from the device.
   fields:
@@ -78,7 +78,7 @@ preset:
       selector:
         entity:
           integration: linkplay
-    preset:
+    preset_number:
       name: Preset
       description: Content preset number on the device
       example: 1
