--- a/custom_components/linkplay/manifest.json
+++ b/custom_components/linkplay/manifest.json
@@ -1,16 +1,17 @@
 {
   "domain": "linkplay",
   "name": "Linkplay",
-  "version":"4.0.0-beta.1",
-  "documentation": "https://github.com/nagyrobi/home-assistant-custom-components-linkplay",
-  "issue_tracker": "https://github.com/nagyrobi/home-assistant-custom-components-linkplay/issues",
+  "version": "4.0.0-beta.1",
+  "documentation": "https://github.com/phedoreanu/home-assistant-custom-components-linkplay",
+  "issue_tracker": "https://github.com/phedoreanu/home-assistant-custom-components-linkplay/issues",
   "after_dependencies": ["http", "tts", "media_source"],
-  "config_flow": false,
+  "config_flow": true,
   "iot_class": "local_polling",
   "codeowners": [
     "@nicjo814",
     "@limych",
-    "@nagyrobi"
+    "@phedoreanu",
+    "@phedoreanu"
   ],
   "requirements": [
     "async-upnp-client>=0.27",
