--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,68 +1,55 @@
-name: Test Config Flow
+name: CI
 
 on:
   push:
-    branches: [ main, develop ]
-    paths:
-      - 'custom_components/linkplay/config_flow.py'
-      - 'tests/**'
-      - 'requirements-test.txt'
+    branches: [master]
   pull_request:
-    branches: [ main, develop ]
-    paths:
-      - 'custom_components/linkplay/config_flow.py'
-      - 'tests/**'
-      - 'requirements-test.txt'
+    branches: [master]
+
+env:
+  DEFAULT_PYTHON: "3.12"
 
 jobs:
-  test:
+  tests:
+    name: Run tests
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Check out code from GitHub
+        uses: actions/checkout@v5
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-test.txt
 
-      - name: Run tests with coverage
+      - name: Test with pytest
         run: |
           pytest tests/ \
-            --cov=custom_components.linkplay.config_flow \
+            --cov=custom_components.linkplay \
             --cov-report=xml \
             --cov-report=term-missing \
             --cov-report=html
 
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v3
-        if: matrix.python-version == '3.11'
-        with:
-          files: ./coverage.xml
-          flags: config_flow
-          name: config_flow_coverage
-          fail_ci_if_error: true
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        if: matrix.python-version == '3.12'
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Archive coverage reports
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: coverage-reports-py${{ matrix.python-version }}
           path: htmlcov/
 
-      - name: Comment PR with coverage
-        if: github.event_name == 'pull_request' && matrix.python-version == '3.11'
-        uses: py-cov-action/python-coverage-comment-action@v3
-        with:
-          GITHUB_TOKEN: ${{ github.token }}
 
