--- a/custom_components/linkplay/manifest.json
+++ b/custom_components/linkplay/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "linkplay",
   "name": "Linkplay",
-  "version": "4.0.0",
+  "version": "4.0.0-beta.4",
   "documentation": "https://github.com/phedoreanu/home-assistant-custom-components-linkplay",
   "issue_tracker": "https://github.com/phedoreanu/home-assistant-custom-components-linkplay/issues",
   "after_dependencies": ["http", "tts", "media_source"],
