--- a/custom_components/linkplay/manifest.json
+++ b/custom_components/linkplay/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "linkplay",
   "name": "Linkplay",
-  "version": "4.0.0-beta.4",
+  "version": "4.0.2",
   "documentation": "https://github.com/phedoreanu/home-assistant-custom-components-linkplay",
   "issue_tracker": "https://github.com/phedoreanu/home-assistant-custom-components-linkplay/issues",
   "after_dependencies": ["http", "tts", "media_source"],
@@ -10,7 +10,7 @@
   "codeowners": [
     "@nicjo814",
     "@limych",
-    "@phedoreanu",
+    "@nagyrobi",
     "@phedoreanu"
   ],
   "requirements": [
